add get team list by group query